# Wallet

./: .env-non-dev  .env.example  .flake8  .gitignore  Dockerfile  app.sh  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 1ec1d7a83235_update_user_model.py  63b2f80fa350_initial_migration.py
src/: logger.py  main.py
src/admin/: admin_models.py
src/backend/: db.py
src/core/: config.py  hashing.py
src/database/: db.py
src/middleware/: middlewares.py
src/migrations/: env.py
src/migrations/versions/: 1ec1d7a83235_update_user_model.py  330409c2fab1_update_wallet_model.py  5deb89b45233_default_balance_now_100.py  5fb3159c9853_add_transaction_logic.py  60c09320cab3_fix_username.py  63b2f80fa350_initial_migration.py  80166d0d5462_test.py  826f0fbdc7b8_create_foreing_key_between_transacton_.py  86bad400329e_drop_table_again.py  94db0437ad09_test_create_wallet_after_create_user.py  bff1ecb96489_added_created_date_column.py  c6421bcd2ec9_create_foreing_key_between_transacton_.py  dea3586b4527_update_wallet_model_for_transaction.py
src/models/: base.py  transaction.py  user.py  wallet.py
src/repositories/: transaction.py  user.py  wallet.py
src/routers/: auth.py  auth_helper.py  transaction.py  wallet.py
src/schemas/: transaction.py  user.py  wallet.py
src/tests/: confest.py  conftest.py  test_auth.py
src/tests/integration_tests/wallet_tests/: test_wallet.py
src/tests/unit_tests/: test_auth.py  test_repo.py  test_transaction.py
src/tests/unit_tests/test_users/: api_tests.py
src/utils/: abstract_repo.py  repository.py
