[tool.poetry]
name = "walletapi"
version = "0.1.0"
description = "p-project"
authors = ["maniakalochka <prochorwolochoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
pytest = "^8.3.3"
alembic = "^1.14.0"
pytest-asyncio = "^0.24.0"
SQLAlchemy = "^2.0.36"
slugify = "^0.0.1"
uvicorn = "^0.32.0"
black = "^24.10.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
