[tool.poetry]
name = "walletapi"
version = "0.1.0"
description = "p-project"
authors = ["maniakalochka <prochorwolochoff@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
pytest = "^8.3.3"
alembic = "^1.14.0"
pytest-asyncio = "^0.24.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.36"}
slugify = "^0.0.1"
uvicorn = "^0.32.0"
black = "^24.10.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
python-multipart = "^0.0.17"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.2"
pre-commit = "^4.0.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
celery = "^5.4.0"
flower = "^2.0.1"
sqladmin = {extras = ["full"], version = "^0.20.1"}
itsdangerous = "^2.2.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
python-json-logger = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
